--- a/source/sass/blocks/fields-group.scss
+++ b/source/sass/blocks/fields-group.scss
@@ -17,17 +17,6 @@
     font-weight: 700;
   }
 
-  @media (max-width: $mobile-width-only) {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 1px;
-      background-color: $form-strip;
-    }
-  }
-
   @media (min-width: $tablet-width) {
     padding-top: 0;
     padding-bottom: 0;
@@ -36,7 +25,7 @@
 
 .fields-group__wrapper {
   margin: 0;
-  padding: 0 20px;
+  padding: 0;
   box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr;
@@ -47,6 +36,10 @@
 .fields-group--contacts .fields-group__wrapper {
   row-gap: 14px;
 
+  @media (min-width: $tablet-width) {
+    row-gap: 22px;
+  }
+
   @media (min-width: $desktop-width) {
     display: flex;
     column-gap: 80px;
@@ -55,10 +48,18 @@
 
 .fields-group--radio .fields-group__wrapper {
   row-gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 22px;
+  }
 }
 
 .fields-group--checkbox .fields-group__wrapper {
   row-gap: 24px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 32px;
+  }
 }
 
 .fields-group--wide .fields-group__wrapper,
@@ -73,7 +74,7 @@
   width: 100%;
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: 230px 230px;
+    grid-template-columns: 230px 200px;
     justify-content: center;
     column-gap: 30px;
   }
@@ -101,6 +102,7 @@
   @media (min-width: $tablet-width) {
     margin-left: 0;
     margin-bottom: 56px;
+    font-size: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -111,7 +113,7 @@
 .fields-group--name .fields-group__title {
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 55px;
+    margin-bottom: 54px;
   }
 
   @media (min-width: $desktop-width) {
@@ -125,6 +127,10 @@
 
 .fields-group--radio .fields-group__title {
   margin-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 57px;
+  }
 }
 
 .fields-group--wide .fields-group__title {
@@ -144,7 +150,7 @@
 
   @media (min-width: $tablet-width) {
     margin-left: auto;
-    margin-bottom: 43px;
+    margin-bottom: 44px;
     width: 350px;
   }
 }
@@ -153,7 +159,7 @@
   margin-bottom: 15px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 55px;
+    margin-bottom: 52px;
   }
 }
 
