--- a/source/sass/blocks/form-section.scss
+++ b/source/sass/blocks/form-section.scss
@@ -16,7 +16,7 @@
   padding: 0 0 39px;
 
   @media (min-width: $tablet-width) {
-    padding: 17px 60px 61px;
+    padding: 40px 60px 61px;
   }
 
   @media (min-width: $desktop-width) {
