--- a/source/sass/blocks/page-lead.scss
+++ b/source/sass/blocks/page-lead.scss
@@ -29,6 +29,10 @@
   align-items: center;
   gap: 28px;
   line-height: 24px;
+
+  @media (min-width: $tablet-width) {
+    gap: 32px;
+  }
 }
 
 .page-lead--advanced .page-lead__wrapper {
